# docs/swagger.json
@@ -12,9 +12,9 @@
     },
     "basePath": "/",
     "paths": {
-        "?Action=Delete": {
+        "/api/proxy_group": {
             "post": {
-                "description": "删除 agent",
+                "description": "创建一个新的代理分组",
                 "consumes": [
                     "application/json"
                 ],
@@ -22,55 +22,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Demo"
+                    "分组管理"
                 ],
-                "summary": "删除 agent",
+                "summary": "创建分组",
                 "parameters": [
                     {
-                        "description": "删除请求参数",
+                        "description": "创建参数",
                         "name": "params",
                         "in": "body",
+                        "required": true,
                         "schema": {
-                            "$ref": "#/definitions/demo.DeleteParams"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "结果：{RetCode:code,Data:数据,Message:消息}",
-                        "schema": {
-                            "$ref": "#/definitions/common.Response"
-                        }
-                    },
-                    "500": {
-                        "description": "结果：{RetCode:code,Data:数据,Message:消息}",
-                        "schema": {
-                            "$ref": "#/definitions/common.Response"
-                        }
-                    }
-                }
-            }
-        },
-        "?Action=GetDetail": {
-            "post": {
-                "description": "获取详情",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Demo"
-                ],
-                "summary": "获取详情",
-                "parameters": [
-                    {
-                        "description": "请求参数",
-                        "name": "params",
-                        "in": "body",
-                        "schema": {
-                            "$ref": "#/definitions/demo.IDParams"
+                            "$ref": "#/definitions/proxy_group.CreateParams"
                         }
                     }
                 ],
@@ -86,11 +48,50 @@
                                     "type": "object",
                                     "properties": {
                                         "Data": {
-                                            "$ref": "#/definitions/models.Demo"
+                                            "$ref": "#/definitions/models.ProxyGroups"
                                         }
                                     }
                                 }
                             ]
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/common.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/proxy_group/delete": {
+            "delete": {
+                "description": "删除分组",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "分组管理"
+                ],
+                "summary": "删除分组",
+                "parameters": [
+                    {
+                        "description": "删除请求参数",
+                        "name": "params",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/proxy_group.DeleteParams"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "结果：{RetCode:code,Data:数据,Message:消息}",
+                        "schema": {
+                            "$ref": "#/definitions/common.Response"
                         }
                     },
                     "500": {
@@ -102,9 +103,9 @@
                 }
             }
         },
-        "?Action=GetList": {
+        "/api/proxy_group/list": {
             "post": {
-                "description": "获取列表",
+                "description": "获取分组列表",
                 "consumes": [
                     "application/json"
                 ],
@@ -112,9 +113,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Demo"
+                    "分组管理"
                 ],
-                "summary": "获取列表",
+                "summary": "获取分组列表",
                 "parameters": [
                     {
                         "description": "查询通用请求参数",
@@ -139,8 +140,58 @@
                                         "Data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/models.Demo"
+                                                "$ref": "#/definitions/models.ProxyGroups"
                                             }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "结果：{RetCode:code,Data:数据,Message:消息}",
+                        "schema": {
+                            "$ref": "#/definitions/common.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/proxy_group/{id}": {
+            "get": {
+                "description": "获取分组详情",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "分组管理"
+                ],
+                "summary": "获取分组详情",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "分组ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "结果：{RetCode:code,Data:数据,Message:消息}",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/common.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "Data": {
+                                            "$ref": "#/definitions/models.ProxyGroups"
                                         }
                                     }
                                 }
@@ -166,7 +217,7 @@
                     "type": "string"
                 },
                 "RetCode": {
-                    "type": "integer"
+                    "$ref": "#/definitions/common.RetCode"
                 }
             }
         },
@@ -178,41 +229,53 @@
                     "type": "string"
                 },
                 "RetCode": {
-                    "type": "integer"
+                    "$ref": "#/definitions/common.RetCode"
                 },
                 "TotalCount": {
                     "type": "integer"
                 }
             }
         },
-        "demo.DeleteParams": {
-            "type": "object",
-            "required": [
-                "ids"
+        "common.RetCode": {
+            "type": "integer",
+            "enum": [
+                0,
+                4030,
+                100050,
+                6003,
+                6004,
+                6005,
+                6006,
+                6007,
+                6008,
+                6009,
+                6010,
+                6011,
+                6012,
+                6013,
+                6014,
+                6015
             ],
-            "properties": {
-                "ids": {
-                    "description": "待删除 ID 列表",
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
-                }
-            }
+            "x-enum-varnames": [
+                "SUCCESS",
+                "FORBIDDEN",
+                "ActionNotFound",
+                "FAILED",
+                "ErrorDatabaseRead",
+                "ErrorDatabaseWrite",
+                "ErrInvalidParams",
+                "ErrInvalidJSONParams",
+                "ErrorPrivilege",
+                "ErrorResourceNotExist",
+                "ErrorCallOtherSrv",
+                "ActionFailed",
+                "ErrGetList",
+                "ErrGetDetail",
+                "ErrDelete",
+                "ErrCreate"
+            ]
         },
-        "demo.IDParams": {
-            "type": "object",
-            "required": [
-                "Id"
-            ],
-            "properties": {
-                "Id": {
-                    "description": "主键 ID",
-                    "type": "integer"
-                }
-            }
-        },
-        "models.Demo": {
+        "models.ProxyGroups": {
             "type": "object",
             "properties": {
                 "CreateTime": {
@@ -224,8 +287,17 @@
                 "Deleter": {
                     "type": "string"
                 },
+                "Description": {
+                    "type": "string"
+                },
                 "Id": {
                     "type": "integer"
+                },
+                "MaxOnline": {
+                    "type": "string"
+                },
+                "Name": {
+                    "type": "string"
                 },
                 "UpdateTime": {
                     "description": "更新时间",
@@ -233,9 +305,54 @@
                 },
                 "Updater": {
                     "type": "string"
+                }
+            }
+        },
+        "proxy_group.CreateParams": {
+            "type": "object",
+            "properties": {
+                "CreateTime": {
+                    "type": "integer"
                 },
-                "User": {
+                "Creator": {
                     "type": "string"
+                },
+                "Deleter": {
+                    "type": "string"
+                },
+                "Description": {
+                    "type": "string"
+                },
+                "Id": {
+                    "type": "integer"
+                },
+                "MaxOnline": {
+                    "type": "string"
+                },
+                "Name": {
+                    "type": "string"
+                },
+                "UpdateTime": {
+                    "description": "更新时间",
+                    "type": "integer"
+                },
+                "Updater": {
+                    "type": "string"
+                }
+            }
+        },
+        "proxy_group.DeleteParams": {
+            "type": "object",
+            "required": [
+                "ids"
+            ],
+            "properties": {
+                "ids": {
+                    "description": "待删除 ID 列表",
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
                 }
             }
         },
